@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-02-20 (SVN):
+    * view.c: Moved the Draw_Crosshair() call from V_RenderView() to
+      SCR_UpdateScreen() of screen.c.
+
+2012-02-20 (SVN):
     * gl_screen.c, screen.c: Merged hexen2 and hexenworld versions, and
       moved under h2shared.
 
